# Ci-mvp

./: .env.example  .gitignore  CHANGELOG.md  README.md  action.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: triage.yml
src/: cli.py  config.py
src/agents/: classifier_agent.py  parser_agent.py  reporter_agent.py  state.py  supervisor.py
src/github/: client.py  comment.py  fix_pr.py
src/ingest/: semgrep_parser.py  trivy_parser.py
src/models/: finding.py
tests/: test_classifier_agent.py  test_parser_agent.py  test_reporter_agent.py  test_supervisor.py
tests/fixtures/: classifier_response.json  classifier_response_duplicate.json  semgrep_sample.json  trivy_duplicate_sample.json  trivy_sample.json
